myapp/static/myapp/css/all.css
window::-webkit-scrollbar-thumb {
    background: yellow;
    color: yellow;
}
  


.overlay overlay_inner a:link {
  color: #999999;
}

#links div {
  color: #999999;
}


.style2 {
  font-size: 14px;
  font-family: Arial, Helvetica, sans-serif;
  font-style: normal;
  padding-left: 20px;
  padding-right: 20px;
}

footer {
    text-align: center;
    color: #444;
    font-family: Verdana, Geneva, sans-serif;
    font-size: 10px;
    margin-bottom: 65px;
}

/* the "slideshow" stuff is used in home and in portrait, so it's in all.css */
/* height was determined empirically to get the exact spacing desired (page starts shrinking
 * down when window gets right above copyright */
.myslideshow {
  height: calc(85vh - 125px);
  max-height: 750px;
  min-height: 350px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

.myslide {
  height: calc(85vh - 125px);
  width: 100%;
  max-height: 750px;
  min-height: 350px;
  min-width: 250px;
  position: absolute;
  top: 0;
  opacity: 0;
}

.slideimg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  padding-left: 20px;
  padding-right: 20px;
  object-fit: contain;
  height: 100%;
  width: 100%;

  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

body {
  background-color: #000000;
  //color: #cdb9b0;
  color: #999999;
  font-family: "Times New Roman", Times, serif;
}

h1 {
  //font: 40px Minion;
  text-align: center;
  /* first parenthesis is the height of the slideshow */
  /* fraction multiplier is smallest width/height ratio of portraits in slideshow */
  /* 35px is to compensate for padding of h1 img (see below) */
  max-width: calc((100vh - 240px) * (500 / 755));
  min-width: 280px;
  margin: auto;
}

#viewnote {
  display: none;
}

h1 img {
  padding: 20px;
  /* It's not centered without this adjustment? maybe image doesn't have text centered */
  padding-left: 23px;
  width: 100%;
  max-width: 490px;
}

hr {
  //color: #cdb9b0;
  color: #999999;
  background-color: #999999;
  height: 2px;
  border: none;
}

a {
  outline: 0;
}


a:link {
  color: #999999;
  //color: #cdb9b0;
  text-decoration: none;
}
a:visited {
  text-decoration: none;
  color: #999999;
  //color: #cdb9b0;
}

.icons > a {
  color: #444;
}
.icons > a:visited {
  color: #444;
}
.icons > a:link {
  color: #444;
}
svg {
  fill: #444;
}

svg {
  height: 12px;
  width: 12px;
  position: relative;
  top: -2px;
  //fill: #cdb9b0;
  fill: #444;
}


#links  {
    font-size: 0.8em;
    display: flex;
    justify-content: center;
    min-width: 300px;
}

.links  {
    font-size: 0.8em;
    display: flex;
    justify-content: center;
    min-width: 300px;
}

#links > a {
    display: initial;
    margin-left: 13px;
    margin-right: 13px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.links > a {
    display: initial;
    margin-left: 13px;
    margin-right: 13px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.icons  {
    font-size: 0.8em;
    display: flex;
    justify-content: center;
    margin-top: 28px;
    margin-bottom: 42px;
}

.icons > a {
    margin-left: 10px;
    margin-right: 10px;
}
 

.menu {
    display: none;
}

.topmenu {
    color: #444;
    display: none;
}




#overlay {
  display: none;
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: 1; /* sit at top */
  left: 0;
  top: 0;
  background-color: rgb(0,0,0); /* Black fallback color */
  overflow-x: hidden; /* Disable horizontal scroll */
}

#overlay_inner {
  display: none;
  padding: 60px;
}

#overlay_inner > a {
  display: block;
  margin: auto;
  padding-top: 30px;
  font-size: 1.2em;
  text-align: center;
}

#overlay_inner > .icons {
  padding-top: 60px;
}

.closebtn {
  padding-top: 30px;
  padding-right: 30px;
}

#overlay > .closebtn {
  text-align: right;
}
  




/* note: for some reason, after settings links display = none with javascript, 
   resizing the window doesn't revert their display
   

/* mobile in portrait mode */
@media screen and (max-width: 481px) {
  .menu {
    display: initial;
    margin: 20px;
  }

  .topmenu {
    display: initial;
    position: relative;
    top: -10px;
    margin: 0px;
    margin-bottom: 10px;
    height: 8px;
  }

  h1 img {
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .myslideshow {
    height: calc(100vh - (0.14745308311 * 480px * 2) - 80px);
  }
  .myslide {
    height: calc(100vh - (0.14745308311 * 480px * 2) - 80px);
  }


  #links a {
    display: none;
  }

  .links a {
    display: none;
  }

  h1 {
    min-width: 300px;
  }
  .icons {
    margin-top: 15px;
    margin-bottom: 35px;
  }
    
}

/* mobile in landscape mode */
@media screen and (max-height: 481px) {
  /*
  #viewnote {
    display: initial;
    text-align: center;
    display: block;
    font-style: italic;
    max-width: 92%;
    max-height: 100%;
    margin-left: 4%;
    margin-right: 4%;
  }
  */
}


/* if any page needs scrollbar, all have scrollbar */
@media screen and (max-height: 1060px) {
  html {
    overflow-y: scroll;
  }
}

@media screen and (max-height: 700px) {
  .menu {
    display: initial;
    margin: 20px;
  }

  #links a {
    display: none;
  }
}

/* all hover effects go in here, so they don't fire on mobile */
@media(hover: hover) and (pointer: fine) {
  #links div:hover {
    color: #FFFFFF;
  }
  .clickable:hover {
    text-decoration: none;
    color: #FFFFFF;
  }
  a:hover {
    text-decoration: none;
    color: #FFFFFF;
  }
  .icons > a:hover {
    color: #FFFFFF;
  }
  svg:hover {
    fill: #FFFFFF;
  }
  .topmenu:hover {
    text-decoration: none;
    color: #FFFFFF;
    cursor: pointer;
  }
  .menu:hover {
    text-decoration: none;
    color: #FFFFFF;
    cursor: pointer;
  }
}

